configs/net.yml
apiVersion: v1
kind: Pod
metadata:
  name: net-tools
spec:
  containers:
    - name: shell-container
      image: praqma/network-multitool
      command: ["sleep", "infinity"]
      stdin: true
      tty: true
  restartPolicy: Always
